@@ -1,6 +1,7 @@
 6.5:
 ----
 
+Fixed passing of Realism value and audio language from CSM to LEM.
 Added Rmaia's AGC 2.0 changes (e.g. new LEM ascent autopilot)
 Added roughly correct masses for different payloads.
 Added Apollo 13 O2 tank quantity sensor failure.
